--- a/meta-w2/src/App.css
+++ b/meta-w2/src/App.css
@@ -47,6 +47,10 @@ div.promo-section {
   background-color: #61dafb;
 }
 
+div.one-promo h2 {
+  margin-bottom: 60px;
+}
+
 div#person-form {
   margin-top: 30px;
   padding-top: 20px;
