--- a/tic-tac-toe/src/components/TicTacToePage.module.css
+++ b/tic-tac-toe/src/components/TicTacToePage.module.css
@@ -5,7 +5,7 @@ body {
 }
 
 .page {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   align-items: center;
 }
@@ -20,4 +20,17 @@ h1 {
   font-weight: bold;
   color: darkviolet;
   margin-bottom: 0.8em;
+}
+
+button.command {
+  background-color: darkviolet;
+  border: none;
+  border-radius: 0.375em;
+  color: white;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  margin-top: 0.8em;
+  padding: 0.6em 1.1em;
+  text-decoration: none;
 }
